# cmake-library-example

./: .gitignore  LICENSE  README.md
external-project/: CMakeLists.txt  main.cpp
internal-project/: CMakeLists.txt  main.cpp
internal-project/libraries/: CMakeLists.txt
internal-project/libraries/SomeLibrary/: CMakeLists.txt  Config.cmake.in  LICENSE  README.md
internal-project/libraries/SomeLibrary/cmake/: Installing.cmake  Packing.cmake
internal-project/libraries/SomeLibrary/include/: some.h
internal-project/libraries/SomeLibrary/src/: some.cpp  things.h
